@@ -11,12 +11,14 @@ public class ShapeManager {
     private final Map<String, Shape> shapes;
     private final List<Shape> drawOrder;
     private final Map<String, Group> groups;
+    private final GroupManager groupManager;
     
-    public ShapeManager(Map<String, Shape> shapes, List<Shape> drawOrder, 
-                       Map<String, Group> groups) {
+    public ShapeManager(Map<String, Shape> shapes, List<Shape> drawOrder,
+                        Map<String, Group> groups, GroupManager groupManager) {
         this.shapes = shapes;
         this.drawOrder = drawOrder;
         this.groups = groups;
+        this.groupManager = groupManager;
     }
     
     /**
@@ -26,28 +28,25 @@ public class ShapeManager {
      * @throws IllegalArgumentException if name is null/empty or shape doesn't exist
      */
     public void deleteShape(String name) {
-        if (name == null || name.trim().isEmpty()) {
+        if (name == null || name.isBlank()) {
             throw new IllegalArgumentException("Shape name cannot be null or empty");
         }
-        
-        Shape s = shapes.get(name);
-        if (s == null) {
+
+        // NEW: Check if shape is hidden in a group
+        if (groupManager.isHidden(name)) {
+            throw new IllegalArgumentException("Cannot delete shape that is part of a group: " + name);
+        }
+
+        Shape shape = shapes.get(name);
+        if (shape == null) {
             throw new IllegalArgumentException("Shape not found: " + name);
         }
-        
-        if (s instanceof Group) {
-            Group grp = (Group) s;
-            List<Shape> membersCopy = new ArrayList<>(grp.getShapes());
-            
-            for (Shape member : membersCopy) {
-                if (!member.name().equals(name)) {
-                    deleteShape(member.name());
-                }
-            }
+
+        shapes.remove(name);
+        drawOrder.remove(shape);
+
+        if (shape instanceof Group) {
             groups.remove(name);
         }
-        
-        shapes.remove(name);
-        drawOrder.remove(s);
     }
 }
